fix scss script

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,16 @@
     "doganoo/php-algorithms": "^1.0.7",
     "doganoo/php-util": "^0.3",
     "ezyang/htmlpurifier": "^4.13",
+    "firebase/php-jwt": "^5.2",
+    "laminas/laminas-config": "^3.5",
+    "laminas/laminas-config-aggregator": "^1.5",
+    "laminas/laminas-diactoros": "^2.5",
+    "laminas/laminas-servicemanager": "^3.6",
     "laminas/laminas-validator": "^2.13",
+    "mezzio/mezzio": "^3.3",
+    "mezzio/mezzio-helpers": "^5.4",
+    "mezzio/mezzio-laminasrouter": "^3.1",
+    "mezzio/mezzio-twigrenderer": "^2.6",
     "monolog/monolog": "^2.2",
     "phpmailer/phpmailer": "^6.1",
     "psr/log": "^1.1",
@@ -43,16 +52,7 @@
     "symfony/event-dispatcher": "^5.2",
     "symfony/mime": "^4.4",
     "twitter/bootstrap": "^4.5",
-    "xobotyi/php-mime-type": "^1.2",
-    "laminas/laminas-config-aggregator": "^1.5",
-    "laminas/laminas-diactoros": "^2.5",
-    "mezzio/mezzio": "^3.3",
-    "laminas/laminas-servicemanager": "^3.6",
-    "mezzio/mezzio-laminasrouter": "^3.1",
-    "laminas/laminas-config": "^3.5",
-    "mezzio/mezzio-helpers": "^5.4",
-    "mezzio/mezzio-twigrenderer": "^2.6",
-    "firebase/php-jwt": "^5.2"
+    "xobotyi/php-mime-type": "^1.2"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.8",
