--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.14.3",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-env": "^7.14.7",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
@@ -43,20 +43,20 @@
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
     "sass-loader": "^10.2.0",
-    "vue-template-compiler": "^2.6.12",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "@braintree/sanitize-url": "^5.0.1",
-    "@vue/compiler-sfc": "^3.0.11",
+    "@braintree/sanitize-url": "^5.0.2",
+    "@vue/compiler-sfc": "^3.1.2",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
     "browserslist": ">=4.16.5",
-    "core-js": "^3.13.1",
+    "core-js": "^3.15.1",
     "dexie": "^3.0.3",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.4",
@@ -70,7 +70,8 @@
     "lodash": "^4.17.21",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
-    "npm": "^7.15.0",
+    "normalize-url": "^5.0.0",
+    "npm": "^7.19.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "resolve": "^1.20.0",
@@ -78,8 +79,8 @@
     "simple-dijs": "^2.0.2",
     "ssri": ">=8.0.1",
     "twig": "^1.15.4",
-    "vue": "^2.6.12",
-    "vue-i18n": "^8.24.4",
+    "vue": "^2.6.14",
+    "vue-i18n": "^8.24.5",
     "vue-loader": "^15.9.6",
     "vue-loading-skeleton": "^1.1.9",
     "vue-select": "^3.11.2",
