--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -24,12 +24,6 @@ jobs:
           args: --profile --ignore-platform-reqs
           php_version: 7.4
 
-      - name: PHPUnit Tests
-        uses: php-actions/phpunit@v3
-        with:
-          configuration: test/phpunit.xml
-          memory_limit: 256M
-
       - name: Build Project
         uses: actions/setup-node@v2
         with:
@@ -41,13 +35,20 @@ jobs:
       - run: npm install
       - run: npm run build:prod
 
+      - name: PHPUnit Tests
+        uses: php-actions/phpunit@v3
+        with:
+          configuration: test/phpunit.xml
+          memory_limit: 256M
+
       - name: Clean Up
         run: |
           cp config/config.sample.php config/config.php
+          ls -R *
           cd bin/ && php scss.php && cd ../
           rm -rf test/ apps/*/Test/
           rm -rf node_modules
-          rm -rf .github .git config/phpstan config/vagrant test/
+          rm -rf .github .git config/phpstan config/vagrant
           rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js
           rm -rf apps/*/js/
           rm -rf apps/*/scss/
