--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -51,7 +51,7 @@ jobs:
           rm -rf test/ apps/*/Test/
           rm -rf apps/*/js/
           rm -rf apps/*/scss/
-          zip -r nightly-${{ github.sha }}.zip ../server
+          cd ../ zip -r nightly-${{ github.sha }}.zip server
 
       - name: Create Release
         id: create_release
