--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -52,7 +52,7 @@ jobs:
           rm -rf apps/*/js/
           rm -rf apps/*/scss/
           cd ../
-          zip -r nightly-${{ github.sha }}.zip server
+          zip -r /tmp/nightly-${{ github.sha }}.zip server
 
       - name: Create Release
         id: create_release
@@ -72,6 +72,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./nightly-${{ github.sha }}.zip
+          asset_path: ./tmp/nightly-${{ github.sha }}.zip
           asset_name: nightly-${{ github.sha }}.zip
           asset_content_type: application/zip
