--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -53,6 +53,7 @@ jobs:
           rm -rf apps/*/scss/
           cd ../
           zip -r /tmp/nightly${{ github.sha }}.zip server
+          chmod 777 /tmp/nightly${{ github.sha }}.zip
 
       - name: Create Release
         id: create_release
