--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -74,6 +74,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./tmp/nightly${{ github.sha }}.zip
+          asset_path: /tmp/nightly${{ github.sha }}.zip
           asset_name: nightly${{ github.sha }}.zip
           asset_content_type: application/zip
