--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,6 +17,26 @@ jobs:
           path: /tmp/composer-cache
           key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
 
+      # tests
+      - name: Composer Install
+        uses: php-actions/composer@v5
+        with:
+          dev: yes
+          args: --profile --ignore-platform-reqs
+          php_version: 7.4
+
+      - name: PHPUnit Tests
+        uses: php-actions/phpunit@v3
+        with:
+          configuration: test/phpunit.xml
+          memory_limit: 256M
+
+      # end tests
+      - name: end tests
+        run: |
+          rm config/config.php    # remove test config
+          rm -r vendor/
+
       - name: Composer Install
         uses: php-actions/composer@v5
         with:
@@ -31,17 +51,11 @@ jobs:
 
       - run: npm install
       - run: npm run build:prod
-      - run: cp config/config.sample.php config/config.php
-
-      - name: PHPUnit Tests
-        uses: php-actions/phpunit@v3
-        with:
-          configuration: test/phpunit.xml
-          memory_limit: 256M
 
       - name: Clean Up
         run: |
-          cd bin/ && php scss.php && cd ../
+          cp config/config.sample.php config/config.php
+          cd bin/ && php console.php general-api:compile-scss && cd ../
           rm -rf node_modules
           rm -rf .github .git config/phpstan config/vagrant
           rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js output.log
@@ -54,6 +68,7 @@ jobs:
           zip -r /tmp/nightly${{ github.sha }}.zip server
           chmod 777 /tmp/nightly${{ github.sha }}.zip
           ls -ltra /tmp
+          echo ${{ steps.create_release.outputs.upload_url }}
 
       - name: Create Release
         id: create_release
