--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,6 +17,11 @@ jobs:
           path: /tmp/composer-cache
           key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
 
+      # start tests
+      - name: start tests
+        run: |
+          cp config/config.sample.php config/config.php
+
       # tests
       - name: Composer Install
         uses: php-actions/composer@v5
