--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -39,6 +39,7 @@ jobs:
       # end tests
       - name: end tests
         run: |
+          chmod -R 777 vendor
           rm config/config.php    # remove test config
           rm -r vendor/
 
