--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -89,17 +89,18 @@ jobs:
           sudo chmod 777 nightly${{ github.sha }}.zip
           ls -ltra
           echo ${{ steps.create_release.outputs.upload_url }}
+          cd ../
 
-#      - name: Create Release
-#        id: create_release
-#        uses: actions/create-release@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-#        with:
-#          tag_name: nightly${{ github.sha }}
-#          release_name: nightly${{ github.sha }}
-#          draft: false
-#          prerelease: false
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        with:
+          tag_name: nightly${{ github.sha }}
+          release_name: nightly${{ github.sha }}
+          draft: false
+          prerelease: false
 
       - run: ls -ltra
 
