enable prod build

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -56,7 +56,7 @@ jobs:
           node-version: '12.18.2'
 
       - run: npm install
-      #      - run: npm run build:prod
+      - run: npm run build:prod
 
       - name: create configs
         run: |
