--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "jquery-ui-dist": "^1.12.1",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
+    "locutus": ">2.0.11",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
     "normalize-url": "^5.0.0",
