--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.12.1",
     "localforage": "^1.9.0",
-    "lodash": "^4.17.21",
     "locutus": ">2.0.11",
+    "lodash": "^4.17.21",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
     "normalize-url": "^5.0.0",
@@ -81,6 +81,7 @@
     "ssri": ">=8.0.1",
     "twig": "^1.15.4",
     "vue": "^2.6.14",
+    "vue-context-menu": "^2.0.6",
     "vue-i18n": "^8.24.5",
     "vue-loader": "^15.9.6",
     "vue-loading-skeleton": "^1.1.9",
