--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^9.3",
     "squizlabs/php_codesniffer": "^3.5",
-    "symfony/var-dumper": "^5.2"
+    "symfony/var-dumper": "^5.2",
+    "vimeo/psalm": "^4.11"
   },
   "autoload": {
     "psr-4": {
