--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     "ext-redis": "*",
     "ext-sqlite3": "*",
     "ext-zip": "*",
-    "doctrine/dbal": "^2.10",
+    "doctrine/dbal": "^3.1.4",
     "doganoo/backgrounder": "^3.1",
     "doganoo/di-services": "^0.0",
     "doganoo/php-algorithms": "^1.0.7",
@@ -39,6 +39,7 @@
     "laminas/laminas-servicemanager": "^3.6",
     "laminas/laminas-validator": "^2.13",
     "mezzio/mezzio": "^3.3",
+    "mezzio/mezzio-cors": "^1.1",
     "mezzio/mezzio-helpers": "^5.4",
     "mezzio/mezzio-laminasrouter": "^3.1",
     "mezzio/mezzio-twigrenderer": "^2.6",
@@ -61,6 +62,7 @@
     "phpcompatibility/php-compatibility": "^9.3",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^9.3",
+    "roave/security-advisories": "dev-latest",
     "squizlabs/php_codesniffer": "^3.5",
     "symfony/var-dumper": "^5.2",
     "vimeo/psalm": "^4.11"
