--- a/package.json
+++ b/package.json
@@ -23,45 +23,33 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.16.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.7",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
-    "babel-eslint": "^10.1.0",
+    "@babel/preset-env": "^7.16.5",
     "babel-loader": "^8.2.2",
-    "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
-    "eslint": "^6.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^4.5.2",
-    "kind-of": ">=6.0.3",
-    "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
     "sass-loader": "^10.2.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "json-schema": ">=0.4.0",
+    "trim-newlines": ">=3.0.1"
   },
   "dependencies": {
+    "ansi-regex": ">=5.0.1",
+    "tar": ">=4.4.18",
     "@braintree/sanitize-url": "^5.0.2",
-    "@vue/compiler-sfc": "^3.1.2",
     "axios": "^0.21.1",
-    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
-    "browserslist": ">=4.16.5",
     "core-js": "^3.15.1",
     "dexie": "^3.0.3",
-    "dot-prop": "^5.3.0",
-    "elliptic": "^6.5.4",
-    "form-data": "^2.5.1",
-    "formvalidation": "^0.6.2-dev",
     "glob": "latest",
+    "glob-parent": ">=5.1.2",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.12.1",
@@ -76,8 +64,6 @@
     "portal-vue": "^2.1.7",
     "resolve": "^1.20.0",
     "serialize-javascript": "^4.0.0",
-    "simple-dijs": "^2.0.2",
-    "ssri": ">=8.0.1",
     "twig": "^1.15.4",
     "vue": "^2.6.14",
     "vue-context-menu": "^2.0.6",
@@ -87,19 +73,5 @@
     "vue-select": "^3.11.2",
     "vuex": "^3.6.2",
     "webpack-merge": "^4.2.2"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
   }
 }
