* add Docker support * split pipelines * migrate login to vue * move middleware stuff to ApplicationStartedMiddleware * adjust Cookie Handling

--- a/composer.json
+++ b/composer.json
@@ -90,6 +90,10 @@
     "source": "https://github.com/keestash/server"
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true,
+      "ergebnis/composer-normalize": true
+    }
   }
 }
