--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.16.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-env": "^7.16.8",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
@@ -42,6 +42,7 @@
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
+    "nth-check": ">=2.0.1",
     "sass-loader": "^10.2.0",
     "trim-newlines": ">=3.0.1",
     "vue-template-compiler": "^2.6.14",
@@ -58,7 +59,7 @@
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
     "browserslist": ">=4.16.5",
-    "core-js": "^3.15.1",
+    "core-js": "^3.20.2",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.4",
     "form-data": "^2.5.1",
@@ -76,7 +77,7 @@
     "npm": "^7.19.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "resolve": "^1.20.0",
+    "resolve": "^1.21.0",
     "serialize-javascript": "^4.0.0",
     "ssri": ">=8.0.1",
     "tar": ">=4.4.18",
