--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.16.7",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-env": "^7.14.7",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
@@ -37,29 +37,29 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^4.5.2",
-    "json-schema": ">=0.4.0",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
-    "nth-check": ">=2.0.1",
     "sass-loader": "^10.2.0",
-    "trim-newlines": ">=3.0.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "json-schema": ">=0.4.0",
+    "trim-newlines": ">=3.0.1"
   },
   "dependencies": {
     "@braintree/sanitize-url": "^5.0.2",
-    "@vue/compiler-sfc": "^3.1.2",
     "ansi-regex": ">=5.0.1",
+    "@vue/compiler-sfc": "^3.1.2",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
     "bootstrap-select": "^1.13.18",
     "bootstrap-vue": "^2.21.2",
     "browserslist": ">=4.16.5",
-    "core-js": "^3.20.2",
+    "core-js": "^3.15.1",
+    "dexie": "^3.0.3",
     "dot-prop": "^5.3.0",
     "elliptic": "^6.5.4",
     "form-data": "^2.5.1",
@@ -68,6 +68,7 @@
     "glob-parent": ">=5.1.2",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
+    "jquery-ui-dist": "^1.12.1",
     "localforage": "^1.9.0",
     "locutus": ">2.0.11",
     "lodash": "^4.17.21",
@@ -77,10 +78,11 @@
     "npm": "^7.19.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "resolve": "^1.21.0",
+    "resolve": "^1.20.0",
     "serialize-javascript": "^4.0.0",
     "ssri": ">=8.0.1",
     "tar": ">=4.4.18",
+    "twig": "^1.15.4",
     "vue": "^2.6.14",
     "vue-context-menu": "^2.0.6",
     "vue-i18n": "^8.24.5",
