--- a/package.json
+++ b/package.json
@@ -37,26 +37,26 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^4.5.2",
+    "json-schema": ">=0.4.0",
     "kind-of": ">=6.0.3",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
     "npm-watch": "^0.7.0",
     "sass-loader": "^10.2.0",
+    "trim-newlines": ">=3.0.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "json-schema": ">=0.4.0",
-    "trim-newlines": ">=3.0.1"
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "@braintree/sanitize-url": "^5.0.2",
-    "ansi-regex": ">=5.0.1",
     "@vue/compiler-sfc": "^3.1.2",
+    "ansi-regex": ">=5.0.1",
     "axios": "^0.21.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.8.1",
     "bootstrap-select": "^1.13.18",
-    "bootstrap-vue": "^2.21.2",
     "browserslist": ">=4.16.5",
     "core-js": "^3.15.1",
     "dexie": "^3.0.3",
