--- a/package.json
+++ b/package.json
@@ -23,74 +23,73 @@
   },
   "homepage": "https://keestash.com",
   "devDependencies": {
-    "@babel/core": "^7.14.6",
+    "@babel/core": "^7.17.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.7",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
+    "@babel/preset-env": "^7.16.11",
+    "@vue/cli-plugin-babel": "^5.0.4",
+    "@vue/cli-plugin-eslint": "^5.0.4",
+    "@vue/cli-service": "^5.0.4",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.2.6",
-    "eslint": "^6.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^7.32.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "html-webpack-plugin": "^4.5.2",
-    "json-schema": ">=0.4.0",
-    "kind-of": ">=6.0.3",
-    "minimist": "^1.2.5",
+    "eslint-plugin-vue": "^7.20.0",
+    "html-webpack-plugin": "^5.5.0",
+    "json-schema": "^0.4.0",
+    "kind-of": "^6.0.3",
+    "minimist": "^1.2.6",
     "node-sass": "^4.14.1",
-    "npm-watch": "^0.7.0",
-    "sass-loader": "^10.2.0",
-    "trim-newlines": ">=3.0.1",
+    "npm-watch": "^0.11.0",
+    "sass-loader": "^11.1.1",
+    "trim-newlines": "^4.0.2",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@braintree/sanitize-url": "^5.0.2",
-    "@vue/compiler-sfc": "^3.1.2",
-    "ansi-regex": ">=5.0.1",
-    "axios": "^0.21.1",
+    "@braintree/sanitize-url": "^6.0.0",
+    "@vue/compiler-sfc": "^3.2.31",
+    "ansi-regex": "^6.0.1",
+    "axios": "^0.26.1",
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "bootstrap-select": "^1.13.18",
-    "browserslist": ">=4.16.5",
-    "core-js": "^3.15.1",
-    "dexie": "^3.0.3",
-    "dot-prop": "^5.3.0",
+    "browserslist": "^4.20.2",
+    "core-js": "^3.21.1",
+    "dexie": "^3.2.1",
+    "dot-prop": "^6.0.1",
     "elliptic": "^6.5.4",
-    "form-data": "^2.5.1",
+    "form-data": "^3.0.1",
     "formvalidation": "^0.6.2-dev",
-    "glob": "latest",
-    "glob-parent": ">=5.1.2",
+    "glob": "7.2.0",
+    "glob-parent": "^6.0.2",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
-    "jquery-ui-dist": "^1.12.1",
-    "localforage": "^1.9.0",
-    "locutus": ">2.0.11",
+    "jquery-ui-dist": "^1.13.1",
+    "localforage": "^1.10.0",
+    "locutus": "^2.0.16",
     "lodash": "^4.17.21",
     "mem": "^6.1.1",
     "moment": "^2.29.1",
-    "normalize-url": "^5.0.0",
-    "npm": "^7.19.0",
+    "normalize-url": "^6.1.0",
+    "npm": "^8.6.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
-    "resolve": "^1.20.0",
+    "resolve": "^1.22.0",
     "serialize-javascript": "^4.0.0",
-    "ssri": ">=8.0.1",
-    "tar": ">=4.4.18",
+    "ssri": "^8.0.1",
+    "tar": "^4.4.19",
     "twig": "^1.15.4",
-    "vue": "^2.6.14",
-    "vue-context-menu": "^2.0.6",
-    "vue-i18n": "^8.24.5",
-    "vue-loader": "^15.9.6",
-    "vue-loading-skeleton": "^1.1.9",
-    "vue-select": "^3.11.2",
-    "vuex": "^3.6.2",
-    "webpack-merge": "^4.2.2"
+    "vue": "^3.2.31",
+    "vue-i18n": "^9.2.0-beta.34",
+    "vue-loader": "^17.0.0",
+    "vue-loading-skeleton": "^2.0.0-beta.1",
+    "vue-select": "^3.18.3",
+    "vuex": "^4.0.2"
   },
   "eslintConfig": {
     "root": true,
