--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "lib": "lib"
   },
   "scripts": {
-    "build:dev": "webpack --mode development",
-    "watch:dev": "webpack --mode development --watch",
+    "build:dev": "webpack --mode development --hot",
+    "watch:dev": "webpack --mode development --watch --hot",
     "build:prod": "NODE_ENV=development webpack -p",
     "watch:prod": "webpack --mode production --watch"
   },
@@ -24,71 +24,46 @@
   "homepage": "https://keestash.com",
   "devDependencies": {
     "@babel/core": "^7.17.8",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.16.11",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/cli-plugin-eslint": "^5.0.4",
     "@vue/cli-service": "^5.0.4",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.4",
-    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^7.20.0",
+    "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "json-schema": "^0.4.0",
-    "kind-of": "^6.0.3",
-    "minimist": "^1.2.6",
-    "node-sass": "^4.14.1",
     "npm-watch": "^0.11.0",
     "sass-loader": "^11.1.1",
-    "trim-newlines": "^4.0.2",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@braintree/sanitize-url": "^6.0.0",
+    "@imengyu/vue3-context-menu": "^1.0.9",
+    "@popperjs/core": "^2.11.4",
     "@vue/compiler-sfc": "^3.2.31",
-    "ansi-regex": "^6.0.1",
     "axios": "^0.26.1",
-    "babel-polyfill": "^6.26.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
-    "bootstrap-select": "^1.13.18",
     "browserslist": "^4.20.2",
-    "core-js": "^3.21.1",
-    "dexie": "^3.2.1",
-    "dot-prop": "^6.0.1",
-    "elliptic": "^6.5.4",
-    "form-data": "^3.0.1",
-    "formvalidation": "^0.6.2-dev",
     "glob": "7.2.0",
     "glob-parent": "^6.0.2",
     "install": "^0.13.0",
-    "jquery": "^3.6.0",
-    "jquery-ui-dist": "^1.13.1",
     "localforage": "^1.10.0",
-    "locutus": "^2.0.16",
     "lodash": "^4.17.21",
-    "mem": "^6.1.1",
     "moment": "^2.29.1",
-    "normalize-url": "^6.1.0",
     "npm": "^8.6.0",
-    "popper.js": "^1.16.1",
-    "portal-vue": "^2.1.7",
-    "resolve": "^1.22.0",
-    "serialize-javascript": "^4.0.0",
-    "ssri": "^8.0.1",
-    "tar": "^4.4.19",
-    "twig": "^1.15.4",
-    "vue": "^3.2.31",
-    "vue-i18n": "^9.2.0-beta.34",
+    "vue": "^3.2.13",
+    "vue-i18n": "^9.1.9",
     "vue-loader": "^17.0.0",
     "vue-loading-skeleton": "^2.0.0-beta.1",
-    "vue-select": "^3.18.3",
+    "vue-select": "^4.0.0-beta.3",
+    "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.2"
   },
   "eslintConfig": {
