introduce node update ts

--- a/.gitignore
+++ b/.gitignore
@@ -275,6 +275,7 @@ data/*
 public/css/*.css
 public/js/*.js
 public/js/*hot-update.json
+public/js/*LICENSE.txt
 
 lib/scss/dist/*.css
 test/config/*.sqlite
