--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "html-webpack-plugin": "^5.5.0",
     "npm-watch": "^0.11.0",
     "sass-loader": "^11.1.1",
-    "webpack": "^5.71.0",
+    "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^4.2.2"
   },
@@ -51,6 +51,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "browserslist": "^4.20.2",
+    "file-loader": "^6.2.0",
     "glob": "7.2.0",
     "glob-parent": "^6.0.2",
     "install": "^0.13.0",
@@ -58,13 +59,17 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "npm": "^8.6.0",
+    "sass": "^1.50.1",
+    "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.9",
     "vue-loader": "^17.0.0",
     "vue-loading-skeleton": "^2.0.0-beta.1",
     "vue-select": "^4.0.0-beta.3",
     "vue-template-compiler": "^2.6.14",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "eslintConfig": {
     "root": true,
