--- a/config/phpstan/baseline.neon
+++ b/config/phpstan/baseline.neon
@@ -11,11 +11,6 @@ parameters:
 			path: ../../apps/ForgotPassword/Api/ResetPassword.php
 
 		-
-			message: "#^Cannot call method getFullPath\\(\\) on KSP\\\\Core\\\\DTO\\\\File\\\\IFile\\|null\\.$#"
-			count: 1
-			path: ../../apps/GeneralApi/Api/UserList.php
-
-		-
 			message: "#^Parameter \\#1 \\$files of method KSA\\\\InstallInstance\\\\Command\\\\Uninstall\\:\\:removeFiles\\(\\) expects array, array\\<int, string\\>\\|false given\\.$#"
 			count: 2
 			path: ../../apps/InstallInstance/Command/Uninstall.php
@@ -186,6 +181,11 @@ parameters:
 			path: ../../apps/Settings/Api/Organization/Activate.php
 
 		-
+			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\User\\\\IUser\\:\\:setJWT\\(\\)\\.$#"
+			count: 1
+			path: ../../apps/Settings/Api/User/Get.php
+
+		-
 			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\User\\\\IUser\\:\\:setPassword\\(\\)\\.$#"
 			count: 1
 			path: ../../apps/Settings/Api/User/UserAdd.php
@@ -202,6 +202,11 @@ parameters:
 
 		-
 			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\User\\\\IUser\\:\\:setFirstName\\(\\)\\.$#"
+			count: 1
+			path: ../../apps/Settings/Api/User/UserEdit.php
+
+		-
+			message: "#^Call to an undefined method KSP\\\\Core\\\\DTO\\\\User\\\\IUser\\:\\:setJWT\\(\\)\\.$#"
 			count: 1
 			path: ../../apps/Settings/Api/User/UserEdit.php
 
