* add validation to create user

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     "laminas/laminas-config": "^3.5",
     "laminas/laminas-config-aggregator": "^1.5",
     "laminas/laminas-diactoros": "^2.5",
+    "laminas/laminas-i18n": "^2.15",
     "laminas/laminas-servicemanager": "^3.6",
     "laminas/laminas-validator": "^2.13",
     "mezzio/mezzio": "^3.3",
