--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -36,6 +36,7 @@ jobs:
         with:
           configuration: test/phpunit.xml
           php_extensions: intl
+          php_version: 7.4
           memory_limit: 256M
 
       # end tests
