--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -61,8 +61,8 @@ jobs:
       - name: Clean Up
         run: |
           sudo rm -rf node_modules
-          sudo rm -rf .github .git config/phpstan config/vagrant
-          sudo rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js output.log
+          sudo rm -rf .github .git config/phpstan config/vagrant config/docker
+          sudo rm -f .babelrc .editorconfig .eslintrc.js .gitignore Vagrantfile composer.json composer.lock package-lock.json package.json webpack.config.js output.log README.md psalm.xml docker-compose.yaml docker_tag
           sudo rm -rf test/ apps/*/Test/
           sudo rm -rf apps/*/js/
           sudo rm -rf apps/*/scss/
