--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
+    "moment": "^2.29.4",
     "npm": "^8.6.0",
     "sass": "^1.50.1",
     "style-loader": "^3.3.1",
@@ -69,7 +69,9 @@
     "vue-select": "^4.0.0-beta.3",
     "vue-template-compiler": "^2.6.14",
     "vuex": "^4.0.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "terser": "^5.15.0",
+    "got": "^12.4.1"
   },
   "eslintConfig": {
     "root": true,
